--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="css/style.css" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>World of Warcraft</title>
+    </head>
+    <body>
+        <nav class="navigation">
+            <div class="navigation__blizzard-logo">
+                <a href="#" class="navigation__link">
+                    <img src="media/logo/blizzard_logo.png" alt="" class="navigation__link-img" />
+                </a>
+            </div>
+            <div class="navigation__wow-logo">
+                <img src="media/logo/wow_logo.svg" alt="" class="navigation__wow-logo-image" />
+            </div>
+            <div class="navigation__menu-buttons">
+                <div class="navigation__menu-text">
+                    Game Info <span class="scrolldown-icon">&#8744;</span>
+                </div>
+                <div class="navigation__menu-text">
+                    Expansions <span class="scrolldown-icon">&#8744;</span>
+                </div>
+                <div class="navigation__menu-text">
+                    News <span class="scrolldown-icon">&#8744;</span>
+                </div>
+                <div class="navigation__menu-text">
+                    Community <span class="scrolldown-icon">&#8744;</span>
+                </div>
+                <div class="navigation__menu-text">
+                    Shop <span class="scrolldown-icon">&#8744;</span>
+                </div>
+            </div>
+            <div class="navigation__account-buttons">
+                <div class="navigation__search-button">
+                    <svg class="search-icon">
+                        <use xlink:href="media/sprite.svg#icon-search"></use>
+                    </svg>
+                </div>
+                <div class="navigation__account-button">
+                    <svg class="account-icon">
+                        <use xlink:href="media/sprite.svg#icon-user"></use>
+                    </svg>
+                    <p>Account</p>
+                    <span class="scrolldown-icon">&#8744;</span>
+                </div>
+                <div class="navigation__try-free-button">Try free</div>
+                <div class="navigation__subscribe-button">Subscribe now</div>
+            </div>
+        </nav>
 
+        <main class="main">
+            <div class="main__announcement">
+                <video playsinline autoplay muted loop class="bg-video">
+                    <source src="/media/video/hero_video.mp4" type="video/mp4" />
+                </video>
+
+                Announcement
+            </div>
+            <div class="main__cata-classic">Cata</div>
+            <div class="main__dragonflight-update">DF</div>
+            <div class="main__blizzcon-sale">Blizzcon</div>
+            <div class="main__classic-hc">Classic</div>
+            <div class="main__new">New</div>
+            <div class="main__returning">Returning</div>
+            <div class="main__trading-post">Trading post</div>
+            <div class="main__prime-gaming">Prime</div>
+            <div class="main__12month-promo">12month</div>
+            <div class="main__wotlk-classic">wotlk classic</div>
+            <div class="main__warcraft-rumble">Rumble</div>
+            <div class="main__df-patch">DF patch</div>
+            <div class="main__latest-updates">Hotfix</div>
+            <div class="main__raf">Raf</div>
+            <div class="main__df-wait">Wait</div>
+            <div class="main__socials">Socials</div>
+            <div class="main__footer">Footer</div>
+        </main>
+    </body>
+</html>
