--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <main class="main">
             <div class="main__announcement">
                 <video playsinline autoplay muted loop class="bg-video">
-                    <source src="/media/video/hero_video.mp4" type="video/mp4" />
+                    <source src="../media/video/hero_video.mp4" type="video/mp4" />
                 </video>
 
                 Announcement
